added a register page so that it is not all done on the AuthActivity.kt, added a back button to RegisterActivity.kt aswell so if the user clicked register by accident they can go back to the AuthActivity.kt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
         <item>Paleo</item>
     </string-array>
 
+    <string name="back">Back</string>
+
 
 <string name="onboarding_title_short">FridgeFairy</string>
 <string name="onboarding_title">Cook from What You Have</string>
